--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   !function(){
   }();
 </script>
-<script src="/js/io.js"></script>
-<script src="/js/string.js"></script>
-<script src="/js/tmp.js"></script>
+<script src="./js/io.js"></script>
+<script src="./js/string.js"></script>
+<script src="./js/tmp.js"></script>
 
 </body>
 
