--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
 </head>
 
 <body style="background-color: #f0f0f2;">
+<div class="container">
 <div class="container-fluid">
 
 <div class="example_div">
-  <form action="php/main.php" method="post">
+  <form action="https://www.baidu.com/s">
+<!--  <form action="php/main.php" method="post">-->
   <div class="row">
     <div class="col-xs-10">
-      <input class="cnew form-control" type="text" placeholder="Enter what you want" name="what" required>
+      <input class="cnew form-control" type="text" placeholder="Enter what you want" name="word" required>
     </div>
     <div class="col-xs-2">
       <button class="btn btn-primary" type="submit"><i class="fa fa-paper-plane"></i> 起飞</button>
@@ -30,10 +32,8 @@
   </form>
 
 </div>
-
 </div>
-
-<script src="js/io.js"></script>
+</div>
 
 </body>
 
