--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <!--  <form action="php/main.php" method="post">-->
   <div class="row">
     <div class="col-xs-10">
-      <input class="cnew form-control" type="text" placeholder="Enter what you want" name="word" required>
+      <input class="cnew form-control" type="text" placeholder="Enter whatever you want" name="word" required>
     </div>
     <div class="col-xs-2">
       <button class="btn btn-primary" type="submit"><i class="fa fa-paper-plane"></i> 起飞</button>
