--- a/index.html
+++ b/index.html
@@ -52,10 +52,11 @@
     </a>
 
 <div class="container-fluid" id="example_div">
-  <form action="php/do.php" method="post">
+  <form action="//www.baidu.com/s">
+<!--  <form action="php/do.php" method="post"> -->
   <div class="row">
     <div class="col-xs-10">
-      <input class="form-control" type="text" placeholder="Enter whatever you want" name="what" required>
+      <input class="form-control" type="text" placeholder="Enter whatever you want" name="word" required>
     </div>
     <div class="col-xs-2">
       <button class="btn btn-primary" type="submit"><i class="fa fa-paper-plane"></i> 提交</button>
