--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
   <body>
     <div class="container">
 
-    <a href="/" class="logo logo-img-1x">
+    <a href="index.html" class="logo logo-img-1x">
     <img width="72" height="72" title="" alt="" src="img/favicon.ico">
     </a>
-    <a href="/" class="logo logo-img-2x">
+    <a href="index.html" class="logo logo-img-2x">
     <img width="72" height="72" title="" alt="" src="img/favicon.ico">
     </a>
 
